# helix-db

./: .gitignore  CONTRIBUTORS.md  Cargo.toml  HELIX_CLOUD_IMPLEMENTATION.md  LOCAL_OPERATIONS_RUN_PLAN.md  LOCAL_OPERATIONS_RUN_REPORT.md  MIGRATION_GUIDE.md  README.md  RUNTIME_HQL_INTERPRETER_PLAN.md  STRIPE_INTEGRATION_PLAN.md  TEST_COVERAGE_PLAN.md  TS_CLIENT_GENERATION_PLAN.md  V2_ONLY_CLI_REMODEL_PLAN.md  clippy_check.sh  diff.txt  helix.toml  helix_add_flag_validation_report.md  test_dijkstra_direct.rs  test_dijkstra_validation.hx
db/: queries.hx  schema.hx  test_exists_query.hql
helix-cli/: CHEF_COMMAND_PLAN.md  CLI_LOCALHOST_8080_E2E_RETEST_PLAN_AND_CHECKLIST.md  CLI_LOCALHOST_8080_E2E_RETEST_REPORT.md  CLI_LOCALHOST_8080_TEST_CHECKLIST_AND_REPORT.md  Cargo.toml  ENTERPRISE_CLI_TEST_PLAN.md  README.md  SYNC_SOURCE_OF_TRUTH_IMPLEMENTATION_CHECKLIST.md  TESTING.md  build.sh  cli-testing-logs.txt  helix.toml  install.sh
helix-cli/src/: cleanup.rs  config.rs  docker.rs  enterprise_cloud.rs  errors.rs  github_issue.rs  instance_manager.rs  lib.rs  local_runtime.rs  main.rs  metrics_sender.rs  output.rs  port.rs  project.rs  prompts.rs  setup.rs  sse_client.rs  ts_query.rs  update.rs  utils.rs
helix-cli/src/commands/: add.rs  auth.rs  backup.rs  build.rs  check.rs  chef.rs  cloud.rs  cloud_api.rs  compile.rs  config.rs  create_cluster.rs  dashboard.rs  delete.rs  enterprise_deploy.rs  feedback.rs  init.rs  metrics.rs  migrate.rs  mod.rs  prune.rs  pull.rs  push.rs  query.rs  restart.rs  run.rs  skills.rs  start.rs  status.rs  stop.rs  sync.rs  update.rs  workspace_flow.rs
helix-cli/src/commands/integrations/: docker.rs  ecr.rs  fly.rs  helix.rs  mod.rs
helix-cli/src/commands/logs/: log_source.rs  mod.rs  tui.rs
helix-cli/src/tests/: check_tests.rs  compile_tests.rs  init_tests.rs  lifecycle_tests.rs  mod.rs  project_tests.rs  test_utils.rs  utility_tests.rs
helix-cli/tests/: e2e_cli.rs  e2e_runtime.rs
helix-cli/tests/support/: mod.rs
helix-container/: Cargo.toml
helix-db/: Cargo.toml  fly.toml
sdks/python/: README.md  publish.sh  pyproject.toml
sdks/python/src/helix_db/: __init__.py
sdks/python/src/helixdb/: __init__.py  client.py  dsl.py
sdks/python/tests/: test_client.py  test_dsl.py
(+335 files in other folders)
