[package]
name = "helix-cli"
version = "2.0.0"
edition = "2024"

[dependencies]
helix-metrics = { path = "../metrics" }
helix-db = { path = "../helix-db" }
clap = { version = "4.5.47", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
eyre = "0.6.12"
toml = "0.9.5"
dirs = "6.0.0"
reqwest = { version = "0.12.23", features = ["json"] }
serde_json = "1.0.143"
color-eyre = "0.6.5"
async-trait = "0.1.89"
iota = "0.2.3"
self_update = "0.42.0"

[[bin]]
name = "helix"
path = "src/main.rs"

[features]
normal = ["helix-db/server"]
ingestion = ["helix-db/full"]
default = ["normal"]
