[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "helix-db"
version = "0.1.0"
description = "Python SDK for HelixDB dynamic query DSL and client"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "HelixDB" }]
keywords = ["helixdb", "graph", "vector", "database", "dsl"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/HelixDB/helix-db"
Repository = "https://github.com/HelixDB/helix-db"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
helixdb = ["py.typed"]
